# GGJ2018

./: CMakeLists.txt  main.cpp
assets/: level01.json  level02.tmx  spritesheet.tsx
other/scripts/: cmake-makefile  cmake-windows.bat  cmake-xcode
release/: MamaPacha-linux  MamaPacha-mac  README  libsfml-audio.so.2.4  libsfml-graphics.so.2.4  libsfml-system.so.2.4  libsfml-window.so.2.4  myproject-mac
release/assets/: level01.json
release/assets/rooms/: room02.json  room02.tmx  room03.json  room05.json  room06.json  room06.tmx  room07.json  room08.json  room09.json  room10.json
scripts/: cmake-makefile  cmake-windows.bat  cmake-xcode
spells/: CMakeLists.txt
spells/src/: Spells.cpp  Spells.hpp
src/: CMakeLists.txt  Collider.cpp  Collider.hpp  ColliderMap.cpp  ColliderMap.hpp  CrackObj.hpp  Engine.cpp  Engine.hpp  GameObj.cpp  GameObj.hpp  MainObj.cpp  MainObj.hpp  MoveObj.cpp  MoveObj.hpp  README  Scene.cpp  Scene.hpp  SpriteObj.cpp  SpriteObj.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Utils.cpp  Utils.hpp  main.cpp
src/assets/: level01.js  level01.tmx  spritesheet.pyxel
src/assets/rooms/: map.tsx  room01.json  room01.tmx  room02.json  room03.json  room03.tmx  room04.json  room04.tmx  room05.json  room06.json  room07.json  room08.json  room09.json  room09.tmx  room1.json  room10.json  room10.tmx  room5.tmx  room7.tmx  room8.tmx
src/spells/: CMakeLists.txt
src/spells/src/: Spells_tests.cpp
src/src/: AttackObj.cpp  AttackObj.hpp  Collider.cpp  Collider.hpp  ColliderMap.cpp  ColliderMap.hpp  CrackObj.cpp  Engine.cpp  Engine.hpp  ExitObj.cpp  ExitObj.hpp  FakeSceneA.cpp  FakeSceneA.hpp  GameObj.cpp  GameObj.hpp  JsonScene.cpp  JsonScene.hpp  MainObj.cpp  MainObj.hpp  MonsterObj.cpp  MonsterObj.hpp  MoveObj.cpp  MoveObj.hpp  Scene.cpp  Scene.hpp  ScreenScene.cpp  ScreenScene.hpp  ShareObj.cpp  ShareObj.hpp  Sound.cpp  Sound.hpp  Spells.cpp  Spells.hpp  SpriteObj.cpp  SpriteObj.hpp  SpriteSheet.hpp  SwitchObj.cpp  SwitchObj.hpp  Utils.cpp  Utils.hpp  (+1 more)
